1. change enter number  layout

--- a/app/src/main/res/drawable/name_background1.xml
+++ b/app/src/main/res/drawable/name_background1.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#DA23BC"/>
+        android:color="@color/colorPrimary"/>
     <corners
         android:radius="20dp"/>
 
