--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.ViewPager"
-tools:openDrawer="start"
+
     android:fitsSystemWindows="true"
     app:circularflow_radiusInDP="10dp"
     android:orientation="vertical">
@@ -28,13 +28,15 @@ tools:openDrawer="start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
-        app:tabBackground="@drawable/tab_background"
-        app:tabIndicatorHeight="0dp"
+        app:tabIndicatorFullWidth="true"
+        app:tabIndicatorAnimationMode="linear"
+        app:tabIndicatorColor="#5DD811"
+        app:tabIndicatorHeight="2dp"
         app:tabTextAppearance="@style/CustomTabTextAppearance"
         app:tabTextColor="#070A52"
         app:tabSelectedTextColor="#03001C"
         android:backgroundTint="#537188"
-        app:tabRippleColor="#5DD811"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
