--- a/app/src/main/res/drawable/name_background.xml
+++ b/app/src/main/res/drawable/name_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#272A35"/>
+        android:color="#EFDA95"/>
     <corners
         android:radius="20dp"/>
     <stroke
