--- a/app/src/main/res/drawable/rectangle_16_shape.xml
+++ b/app/src/main/res/drawable/rectangle_16_shape.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- rectangle_1 from your XD file. -->
+<!-- rectangle_16 from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
-	<corners android:radius="20dp" />
-	<solid android:color="@color/rectangle_1_color" />
+	<corners android:radius="100dp" />
+	<solid android:color="@color/rectangle_16_color" />
 </shape>
 
