--- a/app/src/main/res/drawable/toolbar_background.xml
+++ b/app/src/main/res/drawable/toolbar_background.xml
@@ -4,7 +4,7 @@
 
 
     <solid
-        android:color="#292F3F"/>
+        android:color="#000102"/>
 
     <corners
             android:radius="20dp"
