--- a/app/src/main/res/layout/activity_chat_with_friend.xml
+++ b/app/src/main/res/layout/activity_chat_with_friend.xml
@@ -8,7 +8,7 @@
 
     android:layout_height="match_parent"
     tools:context=".ui.fragment.ChatWithFriend"
-    android:background="#292F3F"
+    android:background="#05CFF8"
     android:orientation="vertical"
    >
 
@@ -16,7 +16,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_background"
+android:background="#02CCF4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -51,10 +51,11 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="5dp"
+
 android:padding="10dp"
             android:orientation="vertical"
             android:scrollbars="vertical"
+
 
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
@@ -77,7 +78,7 @@ android:padding="10dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
 android:elevation="8dp"
-
+android:background= "@color/black"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="5dp"
@@ -86,26 +87,50 @@ android:elevation="8dp"
         app:layout_constraintStart_toStartOf="parent">
 
 
-        <EditText
-            android:id="@+id/inputMessage"
+
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="50dp"
-            style="@style/ThemeOverlay.Material3.TextInputEditText"
-            android:hint="Type Something here "
-            android:textColorHint="#859A97"
-            android:textColor="#F1D95B"
-            android:paddingStart="10dp"
-            android:paddingEnd="5dp"
-            android:autofillHints="hello"
-            android:inputType="text"/>
+            android:layout_height="wrap_content"
+            android:elevation="2dp"
+            android:orientation="horizontal"
+            android:background="@drawable/name_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:id="@+id/inputMessage"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="52sp"
+                android:textColorHint="#000000"
+                android:textColor="#000000"
+                android:fontFamily="@font/biryani_semibold"
+                android:hint="@string/enter_your_name"
+                android:autofillHints="name"
+                android:inputType="text" />
+
+            <ImageView
+                android:id="@+id/selectEmoji"
+                android:layout_gravity="center"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:contentDescription="TODO"
+                android:src="@drawable/baseline_emoji_emotions_24" />
+
+        </LinearLayout>
 
         <ImageView
             android:layout_width="0dp"
             android:layout_weight=".1"
+
             android:gravity="center"
             android:id="@+id/send"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:src="@drawable/baseline_send_24"
             android:contentDescription="@string/send" />
 
@@ -114,7 +139,7 @@ android:elevation="8dp"
             android:layout_weight=".1"
             android:gravity="center"
 
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:src="@drawable/baseline_attach_file_24"
             android:contentDescription="@string/attach_file" />
 
