--- a/app/src/main/res/layout/recieve_message.xml
+++ b/app/src/main/res/layout/recieve_message.xml
@@ -1,53 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-android:layout_margin="3dp"
-    android:layout_gravity="start"
+    android:layout_width="match_parent"
+
+ android:layout_gravity="center"
+    android:gravity="center"
+
+
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout2"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/circleback"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:paddingEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        android:paddingStart="5dp"
-        android:padding="5dp"
-        android:gravity="start"
+        <de.hdodenhof.circleimageview.CircleImageView
+
+            android:id="@+id/user_profilr_image"
+            android:layout_width="39dp"
+            android:layout_height="39dp"
+            android:layout_gravity="center"
+            android:src="@drawable/dragon"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp"
+            tools:layout_editor_absoluteX="15dp"
+            tools:layout_editor_absoluteY="200dp" />
+
+
+    </LinearLayout>
+
+
+    <!-- Your layout file -->
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center|start"
+        android:background="@drawable/recieve_message"
+        android:gravity="start"
         android:orientation="vertical"
+android:layout_marginStart="10dp"
+        android:padding="10dp"
+android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
         tools:ignore="UselessParent">
 
         <TextView
             android:id="@+id/recieveMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
-
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-
             android:layout_gravity="start"
-            android:text="@string/hello_ankit_gupta_here"
-            android:textColor="#387C0A"
 
-            />
+            android:fontFamily="@font/biryani_semibold"
+
+            android:gravity="start"
+            android:text="@string/hello_ankit_gupta_here"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#FBFBFB"
+
+            android:textStyle="bold" />
+
+
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/checkmarkImageView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
 
+        android:contentDescription="@string/check_mark"
+        android:src="@drawable/icons8_double_tick_100"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+  />
 
+    <TextView
+        android:id="@+id/time1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+android:layout_marginEnd="5dp"
+        android:gravity="center"
+tools:text="11:11"
+        android:textStyle="bold"
 
-</LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
 
+        app:layout_constraintEnd_toStartOf="@+id/checkmarkImageView"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.118" />
 
-
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
